<resources>
    <string name="app_name">Crypsoar</string>
    <string name="welcome_text">Welcome to Reward Management your Interest Earning App</string>
    <string name="login_now_text">Login Now</string>
    <string name="send_text">Send</string>
    <string name="request_now_text">Request Now</string>
    <string name="registration_text">Register</string>
    <string name="registration_now_text">Register Now</string>
    <string name="get_started_now_text">Get Started Now</string>
    <string name="signup_now_text">Signup Now</string>
    <string name="donthave_txt">Dont have any account?</string>
    <string name="already_txt">Already have account?</string>
    <string name="forgotepsword_txt">Forgot Password\? \  </string>
    <string name="enter_email_id">Enter Your Email Address </string>
    <string name="enter_otp_id">Enter Your Otp Code </string>
    <string name="enter_validemail_id">Enter Valid Email Address </string>
    <string name="enter_validephone_no">Enter Valid Mobile Number </string>
    <string name="enter_password_txt">Enter Password</string>
    <string name="password_validation">You must have 6 characters in your password</string>
    <string name="strong_password_validation">Please Create Strong Password</string>
    <string name="login_with_youraccount_txt">Login with your Account</string>
    <string name="verifyotpTop_txt">Enter Your Otp Code Received on Email Address</string>
    <string name="didnt_receive_code_txt">If you didnt receive the Code!</string>
    <string name="resend_txt">RESEND</string>
    <string name="createaaccount_txt">Create a New Account</string>
    <string name="referalcode_txt">Enter Referral Code</string>
    <string name="mobile_txt">Enter Mobile Number</string>
    <string name="firstname_txt">Enter Your First Name</string>
    <string name="lastname_txt">Enter Your Last Name</string>
    <string name="next_txt">NEXT</string>
    <string name="ok">Ok</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="internet_connection" translatable="false">Internet connection not available</string>
    <string name="waiting_txt">Waiting for OTP...</string>
    //Home
    <string name="welcome_dashboard_txt">Welcome To Dashboard</string>
    <string name="refferal_toolbar_txt">Referral History</string>
    <string name="home_txt">Home</string>
    <string name="dashboard_txt">Dashboard</string>
    <string name="wallet_txt">Wallet</string>
    <string name="history_txt">History</string>
    <string name="add_fund_txt">Add Fund</string>
    <string name="withdraw_txt">Withdraw</string>
    <string name="profile_txt">Profile</string>
    <string name="profile_setting_txt">Profile Setting</string>
    <string name="account_balance_txt">Account Balance</string>
    <string name="add_new_address_txt">Add New Address</string>
    <string name="interested_paid_txt">Total Interest Paid</string>
    <string name="interested_paid_balance">Total Interest Paid Balance</string>
    <string name="total_referral_balance_txt">Total Referral Balance</string>
    <string name="accrued_interest_txt">Accrued Interest</string>
    <string name="add_funds_txt">Add Funds</string>
    <string name="earn_via_referral">Earn via Referral</string>
    <!--    <string name="invite_your_friend_txt">Invite your friends to join & get up to 1% of the total invest done by referral</string>-->
    <string name="transaction_history_txt">Transaction History</string>
    <string name="all_transaction_history_txt">Showing All Transactions</string>
    <string name="referal_history_txt">Referral History</string>
    <string name="no_transaction_history_txt">No Transaction yet made to display.</string>
    <string name="befoureadding_fund_txt">Please select the plan befour adding funds:</string>
    <string name="monthly_payment_txt">Monthly Payment</string>
    <string name="Re_investment_txt">Re-investment Plan</string>
    <string name="totla_amount_txt">Total Amount:</string>
    <string name="referral_code_txt">Referral Code</string>
    <string name="crypto_address_txt">Crypto Address</string>
    <string name="crypto_label_txt">Crypto Label</string>
    <string name="tap_to_copy_txt">Tap to copy</string>
    <string name="payment_setting_txt">Payment Setting</string>
    <string name="change_pasword_txt">Change Password</string>
    <string name="faq_txt">Faq</string>
    <string name="privacy_policy_txt">Privacy Policy</string>
    <string name="contact_us_txt">Contact Us</string>
    <string name="logout_txt">Logout</string>
    <string name="google_key">AIzaSyADo3OpD3_BWG-6NGbBdmI3Jj8wVExZXQI</string>
    <string name="withdraw_funds_txt">Withdrawal</string>
    <string name="confiram_detail_txt">Confirmation Details</string>
    <string name="withdraw_from_base_account_balance">Withdraw From Base Account:</string>
    <string name="payment_confirmation_txt">Payment Confirmation</string>
    <string name="withdraw_from_interested_paid_balance_txt">Withdraw From Interest Paid:</string>
    <string name="withdraw_from_wallet_balance_txt">Withdraw From Wallet:</string>
    <string name="enter_amount_txt">Enter Amount</string>
    <string name="enter_wallet_label">Enter Wallet Label</string>
    <string name="enter_address_txt">Enter Address</string>
    <string name="select_payment_method_txt">Select Any Payment Options</string>
    <string name="cryptocurrency_method_txt">Cryptocurrency</string>
    <string name="cas_method_txt">Cash</string>
    <string name="bank_transfer_txt">Bank Transfer</string>
    <string name="note">NOTE : Fine charges for breaking deposits before monthly plan</string>
    <string name="bill_amount_txt">Bill Amount</string>
    <string name="required_bill_amount_txt">Required Amount</string>
    <string name="pay_now_txt">Pay Now</string>
    <string name="coin_txt">Coin</string>
    <string name="add_new_txt">Add New Address</string>
    <string name="address_txt">Address</string>
    <string name="address_origin_txt">Address Origin</string>
    <string name="wallet_label_txt">Wallet Label</string>
    <string name="network_txt">Network</string>
    <string name="status_saver">Whatsapp Status Saver</string>
    <string name="manage_status">manage your status</string>
    <string name="enter_contact_person_name_txt">Enter contact person name</string>
    <string name="enter_contact_number_txt">Enter contact number</string>
    <string name="enter_state_txt">Enter state and city</string>
    <string name="enter_account_no_txt">Enter account no</string>
    <string name="enter_bank_ifsc_txt">Enter IFSC code</string>
    <string name="enter_branch_name_txt">Enter bank name</string>


    <!--    Api=..................................................-->
    <string name="something_went_wrong">Something went wrong</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="API_TOKEN">0f066346f05134b428251f027d9cc384</string>
    <string name="register_user">signup</string>
    <string name="verification">verifyotp</string>
    <string name="login_user">login</string>
    <string name="resendotp">resendotp</string>
    <string name="forget_password">forgotpassword</string>
    <string name="verify_user">verifyuser</string>
    <string name="dash_board">dashboard</string>
    <string name="payment_opt_list">payment_option</string>
    <string name="coin_list">crypto_types</string>
    <string name="network_list">crypto_protocols</string>
    <string name="payment_setting_api">adduser_addressbook</string>
    <string name="payment_setting_list_api">user_addressbook</string>
    <string name="add_userfund_api">adduser_fund</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="request_withdrow_api">requestuser_withdrawal</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="transection_history">transaction_history</string>
    <string name="referal_history">referral_history</string>
    <string name="setting_api">settings</string>
    <string name="remaining_api">remaining_balance</string>
    <string name="check_user_withdrawal">check_user_withdrawal</string>
    <string name="add_fund">user_fund</string>
    <string name="contact_list">contract_list</string>
    <string name="payment_setting">withdraw_payment_setting</string>
    <string name="change_password">change_password</string>
    <string name="contact_us">contactus</string>
    <string name="edit_profile">profile_update</string>
    <string name="transection_history_byfund">transaction_history_byfund</string>
    <string name="api">cmspage_list</string>
    <string name="delete_address">deleteuser_addressbook</string>
    <string name="end_contract_calculation">end_contract_calculation</string>
    <string name="user_cancel_fund_list">user_cancel_fund_list</string>
    <string name="detail_api">transaction_details</string>
    <string name="notification_list_api">notification_list</string>

</resources>