<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <group android:checkableBehavior="single">


        <!-- upload_video-->
        <item
            android:id="@+id/wallet"
            android:title="@string/wallet_txt"
            app:iconTint="@drawable/selector"
            />

        <item
            android:id="@+id/transection"
            android:title="@string/history_txt"
            app:iconTint="@drawable/selector"
            />
            

        <item
            android:id="@+id/send"

            android:title="@string/send_text"
            app:iconTint="@drawable/selector"
            />
        <item
            android:id="@+id/recieved"

            android:title="@string/receive_txt"
            app:iconTint="@drawable/selector"
            />
        <item
            android:id="@+id/logout"
            android:title="@string/logout_txt"
            app:iconTint="@drawable/selector"
            />


        </group>



</menu>
