<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/black"
        tools:context=".Activity.MainActivity">

        <RelativeLayout
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/welcome_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/overpass_semibold"
                        android:text="@string/welcome_text"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"></TextView>

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_250sdp"
                        android:layout_below="@+id/welcome_txt"

                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="70dp"
                        android:background="@drawable/startlogin_logo"></ImageView>

                    <TextView
                        android:id="@+id/getstarted_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="20dp"

                        android:fontFamily="@font/overpass_semibold"
                        android:gravity="center"
                        android:text="@string/get_started_now_text"
                        android:textAlignment="center"

                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp"></TextView>

                    <TextView
                        android:id="@+id/registration_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/getstarted_txt"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/gradient_history"
                        android:fontFamily="@font/overpass_regular"
                        android:gravity="center"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/registration_text"
                        android:textAlignment="center"

                        android:textColor="@color/black"
                        android:textSize="20dp"></TextView>


                    <TextView
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:layout_below="@+id/registration_btn"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/bg_btn_border"
                        android:fontFamily="@font/overpass_regular"
                        android:gravity="center"
                        android:text="@string/login_now_text"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20dp"></TextView>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>

    </RelativeLayout>
</layout>