<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.LoginActivity">
    <RelativeLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@drawable/logo"></ImageView>

            <TextView

                android:id="@+id/getstarted_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:fontFamily="@font/overpass_semibold"
                android:gravity="center"
                android:text="@string/login_with_youraccount_txt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"></TextView>

            <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/getstarted_txt"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_btn_border_back">

                <ImageView

                    android:id="@+id/email_logo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/email"
                    android:backgroundTint="@color/white"></ImageView>

                <EditText

                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/email_logo"
                    android:background="@null"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/overpass_regular"
                    android:hint="@string/enter_email_id"

                    android:imeOptions="actionNext"

                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"

                    android:textColor="@color/white"
                    android:textColorHint="@color/lightwhite"
                    android:textCursorDrawable="@drawable/edit_corsor_color_gray"
                    android:textSize="@dimen/_14sdp"></EditText>
            </RelativeLayout>

<RelativeLayout
    android:id="@+id/password_layout"
    android:background="@drawable/bg_btn_border_back"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"

    android:layout_below="@+id/email_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView

        android:id="@+id/pasword_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:background="@drawable/password"
        android:backgroundTint="@color/white"></ImageView>

    <ImageView
        android:visibility="gone"
        android:id="@+id/pasword_visible_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/ic_outline_remove_red_eye_24"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/white"></ImageView>
    <ImageView

        android:id="@+id/pasword_invisible_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/ic_outline_visibility_off_24"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/white"></ImageView>

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/pasword_logo"
        android:background="@null"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/overpass_regular"
        android:hint="@string/enter_password_txt"
        android:maxLength="8"
        android:inputType="textPassword"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/lightwhite"

        android:textCursorDrawable="@drawable/edit_corsor_color_gray"
        android:textSize="@dimen/_14sdp"></EditText>
</RelativeLayout>

            <TextView
                android:id="@+id/forgetpassword_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="@dimen/_15sdp"

                android:fontFamily="@font/overpass_italic"
                android:text="@string/forgotepsword_txt"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"></TextView>

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgetpassword_txt"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/gradient_history"
                android:fontFamily="@font/overpass_regular"
                android:gravity="center"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/login_now_text"
                android:textAlignment="center"

                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"></TextView>
    <LinearLayout
        android:id="@+id/donthave_layout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_btn"
        android:layout_marginBottom="@dimen/_60sdp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/overpass_light"
            android:id="@+id/signuptag_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:text="@string/donthave_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ></TextView>
        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/signup_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:text="@string/signup_now_text"
            android:fontFamily="@font/overpass_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ></TextView>

    </LinearLayout>


        </RelativeLayout>


    </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorPrimaryDark"
            />


    </RelativeLayout>
</RelativeLayout>
</layout>