<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".Activity.PDFUploade">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarlyt"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_botom_round">
        <LinearLayout
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RelativeLayout
                android:layout_marginRight="@dimen/_10sdp"
                android:id="@+id/toolbarrecy"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/ic_back">

                </ImageView>

                <TextView
                    android:id="@+id/title_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/menu"
                    android:fontFamily="@font/overpass_regular"
                    android:text="@string/confiram_detail_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"></TextView>

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/notification_icon"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/notificatin">

                </ImageView>

                <ImageView
                    android:visibility="gone"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_19sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/notification_icon"
                    android:background="@drawable/filter">

                </ImageView>
            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:id="@+id/first_lyt"
                android:layout_below="@+id/toolbarrecy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/account_balance_lable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/overpass_regular"
                    android:text="@string/account_balance_txt"
                    android:textColor="@color/headline"
                    android:textSize="@dimen/_12sdp"></TextView>

                <TextView
                    android:id="@+id/account_balance_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/account_balance_lable"

                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/account_balance_txt"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_18sdp"></TextView>
                <LinearLayout
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_22sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/totalreferal_lable"
                        android:layout_below="@+id/toolbarlyt"
                        android:text="@string/interested_paid_balance"
                        android:textColor="@color/headline"
                        android:textSize="@dimen/_10sdp"
                        android:fontFamily="@font/overpass_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <TextView
                        android:layout_gravity="end"
                        android:id="@+id/toalreferal_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/account_balance_lable"

                        android:fontFamily="@font/overpass_regular"
                        android:textSize="@dimen/_12sdp"

                        android:text="@string/account_balance_txt"
                        android:textColor="@color/white"></TextView>

                </LinearLayout>



            </RelativeLayout>
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/image"
        android:layout_below="@+id/toolbarlyt"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp">

    </ImageView>

    <TextView
        android:id="@+id/tran_proof_btn"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient_history"
        android:fontFamily="@font/overpass_semibold"
        android:gravity="center"

        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:text="Transaction Proof"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="@dimen/_14sdp"
        android:visibility="visible"></TextView>


    <TextView
        android:id="@+id/requerst_now_btn"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tran_proof_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/gradient_history"
        android:fontFamily="@font/overpass_semibold"
        android:gravity="center"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:text="Submit"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="@dimen/_14sdp"
        android:visibility="visible"></TextView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/colorPrimaryDark"
        />




</RelativeLayout>
</layout>